Edit QuillEditor config for display correctly data on Project Page. Get Tags list from api, use Quill editor for display data with non readable option

--- a/frontend/src/common/components/QuillEditor/editor.scss
+++ b/frontend/src/common/components/QuillEditor/editor.scss
@@ -27,3 +27,11 @@
   min-height: 18em;
   background-color: vars.$white;
 }
+
+strong {
+  font-weight: bold;
+}
+
+em {
+  font-style: italic;
+}
